--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -253,13 +253,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 159,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "JP5HBO3T3jZr",
-        "outputId": "2c416c03-f856-41ec-a6f7-b553353ee39a"
+        "outputId": "ac429637-faf5-4b2b-f58e-6356475ea634"
       },
       "outputs": [
         {
@@ -524,13 +524,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 157,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "zzL9RSGA84Ub",
-        "outputId": "e9b5efd5-ccb2-4097-dce5-c91faf37ca9c"
+        "outputId": "190c8f88-4ef4-4dc3-ee3c-83d7096687d4"
       },
       "outputs": [
         {
@@ -555,8 +555,7 @@
         "  return sum(int(abs(target-curr)*(abs(target-curr)+1)/2) for curr in current)\n",
         "\n",
         "print(\"part 1:\", min([(i, consumption1(i, positions)) for i in range(0, len(positions))], key=lambda t: t[1]))\n",
-        "print(\"part 2:\", min([(i, consumption2(i, positions)) for i in range(0, len(positions))], key=lambda t: t[1]))\n",
-        "  "
+        "print(\"part 2:\", min([(i, consumption2(i, positions)) for i in range(0, len(positions))], key=lambda t: t[1]))\n"
       ]
     },
     {
@@ -600,7 +599,6 @@
         "sc = dict((i, len(s)) for i, s in enumerate(segments))\n",
         "\n",
         "print(\"part 1:\", sum(1 if len(o) in [sc[1], sc[4], sc[7], sc[8]] else 0 for po in patterns_and_output for o in po['output']))\n",
-        "\n",
         "\n",
         "# 2 find wiring from patterns, then translate/sort output to find the digits\n",
         "\n",
@@ -711,13 +709,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 168,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "1qN4FtKCM4aD",
-        "outputId": "c4d82215-7dba-4846-8f74-d88583dadd69"
+        "outputId": "d67c405b-6455-4208-f8af-f210b27c5be4"
       },
       "outputs": [
         {
@@ -805,13 +803,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 152,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "B1XxUnf7rujv",
-        "outputId": "c9fb97d2-1573-43fd-f6ba-5c30714a1da4"
+        "outputId": "fbf1536e-3253-49cc-8e10-db4c5a9e26b0"
       },
       "outputs": [
         {
@@ -827,7 +825,7 @@
         "lines = [l.strip() for l in open('drive/MyDrive/AoC/2021/input10.txt')]\n",
         "opening = '([{<'\n",
         "closing = ')]}>'\n",
-        "opened_by = dict([(c, opening[i]) for i, c in enumerate(closing)])\n",
+        "opened_by = dict((c, opening[i]) for i, c in enumerate(closing))\n",
         "illegal_scores = {\n",
         "    ')': 3,\n",
         "    ']': 57,\n",
@@ -853,8 +851,8 @@
         "\n",
         "# 2 - discard corrupted lines, complete the remaining lines and score each line for completion chars\n",
         "\n",
-        "closed_by = dict([(o, closing[i]) for i, o in enumerate(opening)])\n",
-        "completion_scores = dict([(c, i+1) for i, c in enumerate(closing)])\n",
+        "closed_by = dict((o, closing[i]) for i, o in enumerate(opening))\n",
+        "completion_scores = dict((c, i+1) for i, c in enumerate(closing))\n",
         "\n",
         "from functools import reduce\n",
         "\n",
@@ -1149,7 +1147,7 @@
         "import re\n",
         "from functools import reduce\n",
         "\n",
-        "dots = set([tuple([int(s) for s in line.strip().split(',')]) for line in open('drive/MyDrive/AoC/2021/input13.txt') if re.match('^\\d', line)])\n",
+        "dots = set(tuple(int(s) for s in line.strip().split(',')) for line in open('drive/MyDrive/AoC/2021/input13.txt') if re.match('^\\d', line))\n",
         "folds = [re.fullmatch('fold along ([xy])=(\\d+)', line.strip()).groups() for line in open('drive/MyDrive/AoC/2021/input13.txt') if line.startswith('fold')]\n",
         "print(\"dots :\", len(dots))\n",
         "print(\"folds:\", folds)\n",
@@ -1157,7 +1155,7 @@
         "def fold(dots, f):\n",
         "  axis, s = f\n",
         "  v = int(s)\n",
-        "  return set([(x, y) if x < v else (2*v-x, y) for x, y in dots]) if axis == 'x' else set([(x, y) if y < v else (x, 2*v-y) for x, y in dots])\n",
+        "  return set((x, y) if x < v else (2*v-x, y) for x, y in dots) if axis == 'x' else set((x, y) if y < v else (x, 2*v-y) for x, y in dots)\n",
         "\n",
         "print('part 1:', len(fold(dots, folds[0])))\n",
         "\n",
@@ -1177,9 +1175,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1DejvypDnsUn",
-        "outputId": "d7731826-9d1f-452a-b3c8-7aaf848ba209"
+        "outputId": "b18bc86a-2357-465b-9d20-cc712a7f7b28"
       },
-      "execution_count": null,
+      "execution_count": 163,
       "outputs": [
         {
           "output_type": "stream",
@@ -1206,7 +1204,7 @@
         "14) Polymers"
       ],
       "metadata": {
-        "id": "1IWP7M-kGndn"
+        "id": "BnSZnWzzKYrk"
       }
     },
     {
@@ -1218,7 +1216,7 @@
         "lines = [line.strip() for line in open('drive/MyDrive/AoC/2021/input14.txt')]\n",
         "template = lines[0]\n",
         "print('template:', template)\n",
-        "rules = dict([re.fullmatch('([A-Z][A-Z])\\s*->\\s*([A-Z])', lines[i]).groups() for i in range (2, len(lines))])\n",
+        "rules = dict(re.fullmatch('([A-Z][A-Z])\\s*->\\s*([A-Z])', lines[i]).groups() for i in range (2, len(lines)))\n",
         "print('rules:', rules)\n",
         "\n",
         "# brute force\n",
@@ -1240,7 +1238,7 @@
         "\n",
         "# helper: functional decrease value for key by delta, remove if <0\n",
         "def dec(d, key, delta):\n",
-        "  return dict([(k, v - delta) if k==key else (k, v) for k, v in d.items() if k != key or v > delta])\n",
+        "  return dict((k, v - delta) if k==key else (k, v) for k, v in d.items() if k != key or v > delta)\n",
         "\n",
         "# applies rule for given pair (with occurrence of pair before step)\n",
         "# cp = pair of dicts (char counts, pair counts)\n",
@@ -1255,7 +1253,7 @@
         "\n",
         "def step2(cp):\n",
         "  c, p = cp\n",
-        "  return reduce(inc, p.items(), cp)\n",
+        "  return reduce(apply_rule, p.items(), cp)\n",
         "\n",
         "# count chars and pairs, and iterate over them 40 times\n",
         "c2, p2 = reduce(lambda cp, i: step2(cp), range(0, 40), (counts(template), counts([template[i:i+2] for i in range (0, len(template)-1)])))\n",
@@ -1268,9 +1266,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ysLa_7VnGpDS",
-        "outputId": "1de1bef3-d818-46f9-e9f5-d1982f9c21bb"
+        "outputId": "beb659d6-b94a-4880-f91b-61557ae05371"
       },
-      "execution_count": null,
+      "execution_count": 165,
       "outputs": [
         {
           "output_type": "stream",
@@ -1318,7 +1316,7 @@
         "  # init\n",
         "  distances = {(0, 0): 0}  # point -> distance , default interpreted as infinite\n",
         "  predecessors = {}  # point -> point , default interpreted as none\n",
-        "  nodes_to_visit = set([(x, y) for y in range(0, h) for x in range(0, w)])\n",
+        "  nodes_to_visit = set((x, y) for y in range(0, h) for x in range(0, w))\n",
         "  \n",
         "  def risk(v):\n",
         "    x, y = v\n",
@@ -1351,7 +1349,7 @@
         "lines = [line.strip() for line in open('drive/MyDrive/AoC/2021/input15.txt')]\n",
         "h = len(lines)\n",
         "w = len(lines[0])\n",
-        "nodes = dict([((x, y), int(s))  for y, line in enumerate(lines) for x, s in enumerate(line)])\n",
+        "nodes = dict(((x, y), int(s))  for y, line in enumerate(lines) for x, s in enumerate(line))\n",
         "\n",
         "print('part 1:', dijkstra_dist(nodes, w, h, 1, (w-1, h-1)))\n",
         "\n",
@@ -1363,9 +1361,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TGOjiNgTI87s",
-        "outputId": "8526fdf2-f1df-48ca-9c9e-aa406696c11e"
+        "outputId": "6907ea66-59ba-413c-850b-03da40c1e9a4"
       },
-      "execution_count": null,
+      "execution_count": 153,
       "outputs": [
         {
           "output_type": "stream",
@@ -1831,7 +1829,7 @@
       "name": "aoc2021.ipynb",
       "provenance": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyPH097LT+3GMLMq/580Dc5P",
+      "authorship_tag": "ABX9TyPc3zzdbd48Luqb0cIHc3Gr",
       "include_colab_link": true
     },
     "kernelspec": {
