--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -1728,7 +1728,7 @@
         "          needs_reduce = False\n",
         "    return root\n",
         "  def replace_with(self, node):\n",
-        "    # swaps out self for node by modifying node's ancestores left/right, returns self\n",
+        "    # swaps out self for node by modifying node's ancestors left/right, returns self\n",
         "    node.parent = self.parent\n",
         "    if self.parent:\n",
         "      if self == self.parent.left:\n",
@@ -1928,9 +1928,6 @@
         "    s.update([tuple(v) for v in moved_r])\n",
         "    return offset, [a(v) for v in s]  # offset = position of right scanner relative to left\n",
         "\n",
-        "def manhattan_dist(v1, v2):\n",
-        "  return sum([abs(d) for d in v1-v2])\n",
-        "\n",
         "scans = []\n",
         "for line in open('drive/MyDrive/AoC/2021/input19.txt'):\n",
         "  if line.startswith('---'):\n",
@@ -1967,7 +1964,7 @@
         "    scans.append(scan) \n",
         "  \n",
         "print(\"part 1, number of beacons:\", len(merged))\n",
-        "print(\"part 2, max Manhattan distance between scanners:\", max(manhattan_dist(s1, s2) for i, s1 in enumerate(scanners) for j, s2 in enumerate(scanners) if j>i))"
+        "print(\"part 2, max Manhattan distance between scanners:\", max(sum([abs(d) for d in s1-s2]) for i, s1 in enumerate(scanners) for j, s2 in enumerate(scanners) if j>i))"
       ],
       "metadata": {
         "colab": {
@@ -1976,7 +1973,7 @@
         "id": "zOEaSByKUlxD",
         "outputId": "66593774-ed3b-4846-9ac5-0a0ce9e3eb1d"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2030,7 +2027,7 @@
         "# That is also the case should the margin be extended.\n",
         "\n",
         "def wrap_x(x, m):\n",
-        "  return (x + m) % (init_w  +2*m) - m \n",
+        "  return (x + m) % (init_w + 2*m) - m \n",
         "\n",
         "def wrap_y(y, m):\n",
         "  return (y + m) % (init_h + 2*m) - m\n",
@@ -2055,7 +2052,7 @@
         "               [(x, y, enh[area_code(img, x, y, m)]) \n",
         "                for y in range(-m, init_h+m) \n",
         "                for x in range(-m, init_w+m)] \n",
-        "               if e])  # only pixels enhanced as 1\n",
+        "               if e])  # only pixels enhanced to 1\n",
         "     \n",
         "iterations=50\n",
         "img=init_img\n",
@@ -2069,8 +2066,7 @@
         "\n",
         "# p(img, 50)\n",
         "\n",
-        "print(f'Number of #-pixels after {iterations} itertions:', sum(img.values()))\n",
-        "  "
+        "print(f'Number of #-pixels after {iterations} itertions:', sum(img.values()))"
       ],
       "metadata": {
         "colab": {
@@ -2079,7 +2075,7 @@
         "id": "GzVHFQGZXHgF",
         "outputId": "d013238f-5ab3-4159-ab1e-d5ec6c167f38"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2087,6 +2083,105 @@
           "text": [
             "enhancement rules: [1, 0, 1, 0, 1, 1, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 0, 1, 1, 0, 0, 1, 0, 0, 1, 1, 0, 0, 0, 0, 1, 0, 1, 0, 1, 1, 0, 0, 0, 1, 0, 0, 1, 1, 1, 0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0, 1, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 1, 0, 0, 1, 1, 1, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 1, 0, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 1, 1, 0, 0, 1, 1, 1, 0, 0, 1, 1, 1, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 1, 0, 0, 1, 0, 0, 1, 0, 1, 1, 0, 0, 1, 1, 1, 1, 1, 0, 0, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 0, 0, 1, 0, 0, 1, 0, 1, 0, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 0, 1, 1, 0, 1, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 1, 0, 0, 0, 1, 0, 0, 1, 0, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 1, 0, 1, 1, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0]\n",
             "Number of #-pixels after 50 itertions: 17497\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "21) Dirac Dice"
+      ],
+      "metadata": {
+        "id": "4Jj4xbcG3fO5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "init_positions = [int(line.strip()[-1:]) for line in open('drive/MyDrive/AoC/2021/input21.txt')]\n",
+        "init_positions = tuple(p if p > 0 else 10 for p in init_positions)\n",
+        "# init_positions = [4, 8]\n",
+        "\n",
+        "print(\"players starting at:\", init_positions)\n",
+        "\n",
+        "# part 1\n",
+        "scores = [0, 0]\n",
+        "roll = 100 # so next is 1\n",
+        "iteration = 0\n",
+        "\n",
+        "def next_roll_1(last_roll):\n",
+        "  return (last_roll % 100 + 1)  # last_roll + 1 but need 1..100, so +1, -1, %, + 1\n",
+        "\n",
+        "#print(iteration, 'x', last_roll, positions, scores)\n",
+        "\n",
+        "positions = [p for p in init_positions]\n",
+        "while max(scores) < 1000 or iteration % 3 != 0:\n",
+        "  player = int((iteration % 6) / 3)\n",
+        "  roll = roll % 100 + 1\n",
+        "  positions[player] = (positions[player] + roll - 1) % 10 + 1\n",
+        "  iteration += 1\n",
+        "  if iteration % 3 == 0: scores[player] += positions[player]\n",
+        "  # print(iteration, player, last_roll, positions, scores)\n",
+        "\n",
+        "print(\"part 1:\", iteration, \"iterations, scores:\", scores, \"=>\", min(scores) * iteration)\n",
+        "\n",
+        "# part 2\n",
+        "\n",
+        "# possible rolls and distribution over 27 universes for 3 rolls\n",
+        "# i.e. 111 = 3 in universe 0\n",
+        "#      112 = 4 in universe 1\n",
+        "#      113 = 5 in universe 2\n",
+        "#      121 = 4 in universe 3\n",
+        "# ...\n",
+        "#      333 = 9 in universe 26 \n",
+        "\n",
+        "# instead of splitting up in 3 universes with equal frequency distribution (1) after each roll,\n",
+        "# we can split up in 7 scores after every 3 rolls, with different distributions\n",
+        "# so for 6 rolls there are 7^2 = 49 possible outcomes with different distributions, instead of 3^6 = 729 with equal distributionn, etc.\n",
+        "# when recursing down, we just need to multiply the frequencies for each branch\n",
+        "\n",
+        "# returns [#universes player 1 wins, #universes player 2 wins]\n",
+        "def iterate(player, positions, scores):\n",
+        "  if scores[0] >= 21:\n",
+        "    return (1,0)\n",
+        "  elif scores[1] >= 21:\n",
+        "    return (0,1)\n",
+        "  else: \n",
+        "    wins = [0,0]\n",
+        "    p0, p1 = positions\n",
+        "    s0, s1 = scores\n",
+        "    for roll, frequency in [(3,1),(4,3),(5,6),(6,7),(7,6),(8,3),(9,1)]:\n",
+        "      new_position = (positions[player] + roll - 1) % 10 + 1\n",
+        "      new_score = scores[player] + new_position\n",
+        "      new_positions = [p0, p1]\n",
+        "      new_positions[player] = new_position\n",
+        "      new_scores = [s0, s1]\n",
+        "      new_scores[player] = new_score\n",
+        "      new_wins = iterate(player^1, new_positions, new_scores)\n",
+        "      wins[0] += frequency*new_wins[0]\n",
+        "      wins[1] += frequency*new_wins[1]\n",
+        "    return wins\n",
+        "\n",
+        "wins = iterate(0, init_positions, [0,0])\n",
+        "print(\"part 2, #universes in which player 1 and 2 win with score >= 21:\", wins, \"with max:\", max(wins))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lzS58Rcq2zeB",
+        "outputId": "7d0ae666-7cde-479c-ded9-fab9dd1404a8"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "players starting at: (9, 6)\n",
+            "part 1: 1098 iterations, scores: [915, 1000] => 1004670\n",
+            "part 2, #universes in which player 1 and 2 win with score >= 21: [492043106122795, 267086464416104] with max: 492043106122795\n"
           ]
         }
       ]
@@ -2098,7 +2193,7 @@
       "name": "aoc2021.ipynb",
       "provenance": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyPd6YRpAQiJhcxbqx5qbLH2",
+      "authorship_tag": "ABX9TyOn5C7m4oRtpftpnK2AVo0Q",
       "include_colab_link": true
     },
     "kernelspec": {
