--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -2197,13 +2197,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FGGaBbZjZP_5",
-        "outputId": "fbf8c254-eadd-4098-c471-573ea39b6a16"
+        "outputId": "79d5c19e-2224-460d-907e-33d30577eb49"
       },
       "outputs": [
         {
@@ -2240,7 +2240,7 @@
       "source": [
         "# part 2\n",
         "\n",
-        "# 1) check intersections init/outside\n",
+        "# 1) check intersections init/outside (OPTIONAL, not really needed)\n",
         "\n",
         "# pre: rx1, rx2 sorted ascendingly for x in 1,2\n",
         "def range_intersection(r11, r12, r21, r22):\n",
@@ -2261,7 +2261,7 @@
         "if intersections_init_outside:\n",
         "  raise(f\"Assumed no intersections of init and outside instructions but got {intersections_init_outside}\")\n",
         "\n",
-        "# 2) Assuming none above, now check intersections outside/outside\n",
+        "# 2) Assuming none above, now check intersections outside/outside (OPTIONAL, not really needed)\n",
         "\n",
         "intersections_outside = []\n",
         "intersecting_instructions = set()\n",
@@ -2283,9 +2283,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "30iLxbxWucDc",
-        "outputId": "43a86377-9031-4477-f535-cd4a89f190a7"
+        "outputId": "4cc42c94-79be-48d0-ea87-f110c8681acb"
       },
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -2322,9 +2322,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iF2QW4pTuf6C",
-        "outputId": "a7f72397-8265-466d-b302-bada53a4c91c"
+        "outputId": "b0f5a46f-cddc-419a-90eb-45cc903e1ef6"
       },
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -2352,19 +2352,20 @@
       "metadata": {
         "id": "YygqYb27bk43"
       },
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# 4) Now go through the outside instructions and execute the command (on/1 or off/0)\n",
-        "# for all affected non-overlapping region.\n",
+        "# 4) (needs a lot of memory!)\n",
+        "# Go through the outside instructions and execute the command (on/1 or off/0)\n",
+        "# for all affected non-overlapping regions.\n",
         "# We are not counting cubes, yet, but keep the resulting region state (0 or 1)\n",
         "# for the x, y, and z indexes into the distinct coordinate lists.\n",
         "\n",
         "region_states = {}  #  (ix, iy, iz) -> 0/1\n",
-        "\n",
+        "on_all = on_init\n",
         "for o, instr in enumerate(outside_instructions):\n",
         "  command, x1, x2, y1, y2, z1, z2 = instr\n",
         "  rx = range(x_vals.index(x1), x_vals.index(x2+1))\n",
@@ -2387,9 +2388,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YMQN14SLDh-x",
-        "outputId": "07f6d2e8-a8ea-4fa9-e390-503a61f4597f"
+        "outputId": "1cf24a91-7f8e-4407-83f3-d91f61756126"
       },
-      "execution_count": null,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -2407,7 +2408,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# 5) Interate over non-overlapping regions that were switched on, look up the\n",
+        "# 5) (needs a lot of memory!) \n",
+        "# Iterate over non-overlapping regions that were switched on, look up the\n",
         "# coordinates and add up the number of cubes.\n",
         "\n",
         "on_all = on_init  # from part 1\n",
@@ -2416,7 +2418,7 @@
         "  # if command == 1:\n",
         "  ix, iy, iz = key_indexes(key)\n",
         "  on_all += (x_vals[ix+1]-x_vals[ix]) * (y_vals[iy+1]-y_vals[iy]) * (z_vals[iz+1]-z_vals[iz])\n",
-        "    \n",
+        "\n",
         "# input22_example.txt: 2758514936282235\n",
         "# input22.txt:         1387966280636636\n",
         "print(\"part 2, total cubes switched on:\", on_all)"
@@ -2757,38 +2759,6 @@
     {
       "cell_type": "code",
       "source": [
-        "d={(0,3):'A', (4,1):'B', (1,0):'C'}\n",
-        "\n",
-        "d2 = {}\n",
-        "\n",
-        "d2[tuple(sorted(d.items(), key=lambda item:item[0]))] = 0\n",
-        "\n",
-        "d2"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "zQK4jEitzzWj",
-        "outputId": "4f0771eb-ecb2-4d73-f780-53e78829b520"
-      },
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{(((0, 3), 'A'), ((1, 0), 'C'), ((4, 1), 'B')): 0}"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 27
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# Part 2\n",
         "# Skip parsing...\n",
         "#############\n",
@@ -3059,7 +3029,7 @@
       "name": "aoc2021.ipynb",
       "provenance": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyMf7fstec9tTOxZveBZe1lX",
+      "authorship_tag": "ABX9TyMWN2Mb8PwBm0dM9P9jG/jf",
       "include_colab_link": true
     },
     "kernelspec": {
