--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -2197,7 +2197,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2285,7 +2285,7 @@
         "id": "30iLxbxWucDc",
         "outputId": "4cc42c94-79be-48d0-ea87-f110c8681acb"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2324,7 +2324,7 @@
         "id": "iF2QW4pTuf6C",
         "outputId": "b0f5a46f-cddc-419a-90eb-45cc903e1ef6"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2352,7 +2352,7 @@
       "metadata": {
         "id": "YygqYb27bk43"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2390,7 +2390,7 @@
         "id": "YMQN14SLDh-x",
         "outputId": "1cf24a91-7f8e-4407-83f3-d91f61756126"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2606,7 +2606,7 @@
         },
         "outputId": "afc8489c-6d3c-4315-cf55-987b836a7ac6"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2918,7 +2918,7 @@
         "id": "sa2iALvyGBkY",
         "outputId": "efdb4c2f-9913-4399-f925-43528c15e301"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3021,6 +3021,357 @@
           "execution_count": 35
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "24) MONAD ALU programm\n",
+        "* inp a - Read an input value and write it to variable a.\n",
+        "* add a b - Add the value of a to the value of b, then store the result in variable a. \n",
+        "* mul a b - Multiply the value of a by the value of b, then store the result in variable a.\n",
+        "* div a b - Divide the value of a by the value of b, truncate the result to an integer, then store the result in variable a. (Here, \"truncate\" means to round the value toward zero.)\n",
+        "* mod a b - Divide the value of a by the value of b, then store the remainder in variable a. (This is also called the modulo operation.)\n",
+        "* eql a b - If the value of a and b are equal, then store the value 1 in variable a. Otherwise, store the value 0 in variable a.\n",
+        "\n",
+        "a = w, x, y, z\n",
+        "b = w, x, y, z or number\n",
+        "\n",
+        "we expect only non-zero digits (1-9) as parameters to inp\n",
+        "\n",
+        "part 1) find the largest 14 digit number (without 0-digits) for which the program ends with z=0\n",
+        "\n",
+        "part 2) find the smallest 14 digit number (without 0-digits) for which the program ends with z=0"
+      ],
+      "metadata": {
+        "id": "8yQzqGJ2Z77H"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# idea -> parse and simplify program and print a representation as formula(s)\n",
+        "# then iterate and eval to find max/min input producing zero in z register\n",
+        "\n",
+        "class Operation():\n",
+        "  def __init__(self):\n",
+        "    pass\n",
+        "  def simplify(self):\n",
+        "    return self\n",
+        "  def eval(self, inputs):\n",
+        "    return None\n",
+        "  def __eq__(self, o: object) -> bool:\n",
+        "    return type(self) == type(o)\n",
+        "  def __ne__(self, o: object) -> bool:\n",
+        "    return type(self) != type(o)\n",
+        "\n",
+        "class UnaryOperation(Operation):\n",
+        "  def __init__(self, left):\n",
+        "    super().__init__()\n",
+        "    self.left = left\n",
+        "  def __eq__(self, o: object) -> bool:\n",
+        "    return type(self) == type(o) and self.left == o.left\n",
+        "  def __ne__(self, o: object) -> bool:\n",
+        "    return type(self) != type(o) or self.left != o.left\n",
+        "\n",
+        "class Constant(UnaryOperation):\n",
+        "  def __init__(self, val):\n",
+        "    super().__init__(val)\n",
+        "    self.rng = (self.left, self.left+1)\n",
+        "  def eval(self, inputs):\n",
+        "    return self.left\n",
+        "  def __repr__(self) -> str:\n",
+        "    return f\"{self.left}\"\n",
+        "\n",
+        "class Inp(UnaryOperation):\n",
+        "  def __init__(self, input_id):\n",
+        "    super().__init__(input_id)\n",
+        "    self.rng = (1, 10)\n",
+        "  def eval(self, inputs):\n",
+        "    return inputs[self.left]\n",
+        "  def __repr__(self) -> str:\n",
+        "    return f\"input{self.left}\"\n",
+        "\n",
+        "class BinOperation(UnaryOperation):\n",
+        "  def __init__(self, left, right):\n",
+        "    super().__init__(left)\n",
+        "    self.right = right\n",
+        "  def __eq__(self, o: object) -> bool:\n",
+        "    return type(self) == type(o) and self.left == o.left and self.right == o.right\n",
+        "  def __ne__(self, o: object) -> bool:\n",
+        "    return type(self) != type(o) or self.left != o.left or self.right != o.right\n",
+        "\n",
+        "class Add(BinOperation):\n",
+        "  def __init__(self, left, right):\n",
+        "    super().__init__(left, right)\n",
+        "    ll, lr = left.rng\n",
+        "    rl, rr = right.rng\n",
+        "    self.rng = tuple(sorted((ll+rl, lr+rr-1)))\n",
+        "  def eval(self, inputs):\n",
+        "    return self.left.eval(inputs) + self.right.eval(inputs)\n",
+        "  def simplify(self):\n",
+        "    l = self.left.simplify() \n",
+        "    r = self.right.simplify()\n",
+        "    return Constant(l.left + r.left) if type(l) is Constant and type(r) is Constant \\\n",
+        "      else l if r == Constant(0) \\\n",
+        "      else r if l == Constant(0) \\\n",
+        "      else Add(l, r)\n",
+        "  def __repr__(self) -> str:\n",
+        "    return f\"({self.left} + {self.right})\"\n",
+        "\n",
+        "class Mul(BinOperation):\n",
+        "  def __init__(self, left, right):\n",
+        "    super().__init__(left, right)\n",
+        "    ll, lr = left.rng\n",
+        "    rl, rr = right.rng\n",
+        "    self.rng = tuple(sorted((ll*rl, (lr-1)*(rr-1)+1)))\n",
+        "  def eval(self, inputs):\n",
+        "    return self.left.eval(inputs) * self.right.eval(inputs)\n",
+        "  def simplify(self):\n",
+        "    l = self.left.simplify() \n",
+        "    r = self.right.simplify()\n",
+        "    return Constant(l.left * r.left) if type(l) is Constant and type(r) is Constant \\\n",
+        "      else l if r == Constant(1) \\\n",
+        "      else r if l == Constant(1) \\\n",
+        "      else Constant(0) if (r == Constant(0) or l == Constant(0)) \\\n",
+        "      else Mul(l, r)\n",
+        "  def __repr__(self) -> str:\n",
+        "    return f\"({self.left} * {self.right})\"\n",
+        "\n",
+        "class Div(BinOperation):\n",
+        "  def __init__(self, left, right):\n",
+        "    super().__init__(left, right)\n",
+        "    ll, lr = left.rng\n",
+        "    rl, rr = right.rng\n",
+        "    self.rng = tuple(sorted((int(ll/rl), int((lr-1)/(rr-1))+1)))\n",
+        "  def eval(self, inputs):\n",
+        "    return int(self.left.eval(inputs)/self.right.eval(inputs))\n",
+        "  def simplify(self):\n",
+        "    l = self.left.simplify() \n",
+        "    r = self.right.simplify()\n",
+        "    return Constant(int(l.left / r.left)) if type(l) is Constant and type(r) is Constant \\\n",
+        "      else l if r == Constant(1) \\\n",
+        "      else 0 if l == Constant(0) \\\n",
+        "      else Div(l, r)\n",
+        "  def __repr__(self) -> str:\n",
+        "    return f\"({self.left} / {self.right})\"\n",
+        "\n",
+        "class Mod(BinOperation):\n",
+        "  def __init__(self, left, right):\n",
+        "    super().__init__(left, right)\n",
+        "    ll, lr = left.rng\n",
+        "    rl, rr = right.rng\n",
+        "    self.rng = (ll if ll>0 and lr<=rr else 0, lr if ll>0 and lr<=rr else rr-1)  # assume positive right operands (in facts it's always 26)\n",
+        "  def eval(self, inputs):\n",
+        "    return self.left.eval(inputs) % self.right.eval(inputs)\n",
+        "  def simplify(self):\n",
+        "    l = self.left.simplify() \n",
+        "    r = self.right.simplify()\n",
+        "    return Constant(l.left % r.left) if type(l) is Constant and type(r) is Constant \\\n",
+        "      else Constant(0) if r == Constant(1) \\\n",
+        "      else Mod(l, r)\n",
+        "  def __repr__(self) -> str:\n",
+        "    return f\"({self.left} % {self.right})\"  \n",
+        "\n",
+        "class Eql(BinOperation):\n",
+        "  def __init__(self, left, right):\n",
+        "    super().__init__(left, right)\n",
+        "    self.rng = (0, 2)\n",
+        "  def eval(self, inputs):\n",
+        "    return 1 if self.left.eval(inputs) == self.right.eval(inputs) else 0\n",
+        "  def simplify(self):\n",
+        "    l = self.left.simplify()\n",
+        "    r = self.right.simplify()\n",
+        "    return (Constant(1) if l.left == r.left else Constant(0)) if type(l) is Constant and type(r) is Constant \\\n",
+        "      else Constant(0) if l.rng[1] <= r.rng[0] or r.rng[1] <= l.rng[0] \\\n",
+        "      else Neq(l.left, l.right) if type(l) is Eql and r == Constant(0) \\\n",
+        "      else Neq(r.left, r.right) if type(r) is Eql and l == Constant(0) \\\n",
+        "      else Eql(l, r)\n",
+        "  def __repr__(self) -> str:\n",
+        "    return f\"(1 if {self.left} == {self.right} else 0)\"  \n",
+        "\n",
+        "class Neq(BinOperation):\n",
+        "  def __init__(self, left, right):\n",
+        "    super().__init__(left, right)\n",
+        "    self.rng = (0, 2)\n",
+        "  def eval(self, inputs):\n",
+        "    return 0 if self.left.eval(inputs) == self.right.eval(inputs) else 1\n",
+        "  def __repr__(self) -> str:\n",
+        "    return f\"(0 if {self.left} == {self.right} else 1)\"  \n",
+        "\n",
+        "class CachedOperation(Operation):\n",
+        "  def __init__(self, input_id, register, operation):\n",
+        "    self.input_id = input_id\n",
+        "    self.register = register\n",
+        "    self.operation = operation\n",
+        "    self.rng = operation.rng\n",
+        "    self.cache = None\n",
+        "  def eval(self, inputs):\n",
+        "    if not self.cache:\n",
+        "      self.cache = self.operation.eval(inputs)\n",
+        "    return self.cache\n",
+        "  def evict(self):\n",
+        "    self.cache = None\n",
+        "  def __repr__(self) -> str:\n",
+        "    return f\"{self.register}{self.input_id}\"\n",
+        "\n",
+        "def parse_operand(op_str, registers):\n",
+        "  return registers[op_str] if op_str in \"wxyz\" else Constant(int(op_str))\n",
+        "\n",
+        "import re\n",
+        "program = [tuple([g for g in re.fullmatch('(inp|add|mul|div|mod|eql) (w|x|y|z) ?(w|x|y|z|-?[0-9]+)?', line.strip()).groups()]) for line in open('drive/MyDrive/AoC/2021/input24.txt')]\n",
+        "\n",
+        "registers = {\n",
+        "  'w': Constant(0),\n",
+        "  'x': Constant(0),\n",
+        "  'y': Constant(0),\n",
+        "  'z': Constant(0),\n",
+        "}\n",
+        "\n",
+        "# each input produces a value in z before the next input is read\n",
+        "zs = []\n",
+        "\n",
+        "input_id = -1\n",
+        "for cmd, left, right in program:\n",
+        "  if cmd == 'inp':\n",
+        "    input_id += 1\n",
+        "    registers[left] = Inp(input_id)\n",
+        "  elif cmd == 'add':\n",
+        "    registers[left] = Add(registers[left], parse_operand(right, registers)).simplify()\n",
+        "    # last step for each input is always 'add z, y' and this does not appear anywhere else \n",
+        "    # -> wrap in a caching node (caches calls to eval() until evict() is called)\n",
+        "    if left == 'z' and right == 'y':  \n",
+        "      registers[left] = CachedOperation(input_id, left, registers[left])\n",
+        "      zs.append(registers[left])\n",
+        "  elif cmd == 'mul':\n",
+        "    registers[left] = Mul(registers[left], parse_operand(right, registers)).simplify()\n",
+        "  elif cmd == 'div':\n",
+        "    registers[left] = Div(registers[left], parse_operand(right, registers)).simplify()\n",
+        "  elif cmd == 'mod':\n",
+        "    registers[left] = Mod(registers[left], parse_operand(right, registers)).simplify()\n",
+        "  elif cmd == 'eql':\n",
+        "    registers[left] = Eql(registers[left], parse_operand(right, registers)).simplify()\n",
+        "\n",
+        "  # print(cmd, left, right, registers[left].rng)\n",
+        "\n",
+        "# print out the z caching nodes\n",
+        "for z in zs:\n",
+        "  print(z, z.operation) \n",
+        "\n",
+        "# prints:\n",
+        "\"\"\"\n",
+        "z0 (input0 + 8)\n",
+        "z1 ((z0 * 26) + (input1 + 8))\n",
+        "z2 ((z1 * 26) + (input2 + 12))\n",
+        "z3 (((z2 / 26) * ((25 * (0 if ((z2 % 26) + -8) == input3 else 1)) + 1)) + ((input3 + 10) * (0 if ((z2 % 26) + -8) == input3 else 1)))\n",
+        "z4 ((z3 * 26) + (input4 + 2))\n",
+        "z5 ((z4 * 26) + (input5 + 8))\n",
+        "z6 (((z5 / 26) * ((25 * (0 if ((z5 % 26) + -11) == input6 else 1)) + 1)) + ((input6 + 4) * (0 if ((z5 % 26) + -11) == input6 else 1)))\n",
+        "z7 ((z6 * 26) + (input7 + 9))\n",
+        "z8 (((z7 / 26) * ((25 * (0 if ((z7 % 26) + -3) == input8 else 1)) + 1)) + ((input8 + 10) * (0 if ((z7 % 26) + -3) == input8 else 1)))\n",
+        "z9 ((z8 * 26) + (input9 + 3))\n",
+        "z10 (((z9 / 26) * ((25 * (0 if ((z9 % 26) + -3) == input10 else 1)) + 1)) + ((input10 + 7) * (0 if ((z9 % 26) + -3) == input10 else 1)))\n",
+        "z11 (((z10 / 26) * ((25 * (0 if ((z10 % 26) + -1) == input11 else 1)) + 1)) + ((input11 + 7) * (0 if ((z10 % 26) + -1) == input11 else 1)))\n",
+        "z12 (((z11 / 26) * ((25 * (0 if ((z11 % 26) + -10) == input12 else 1)) + 1)) + ((input12 + 2) * (0 if ((z11 % 26) + -10) == input12 else 1)))\n",
+        "z13 (((z12 / 26) * ((25 * (0 if ((z12 % 26) + -16) == input13 else 1)) + 1)) + ((input13 + 2) * (0 if ((z12 % 26) + -16) == input13 else 1)))\n",
+        "\"\"\"\n",
+        "\n",
+        "# from the print out of the z caching nodes, we can see that \n",
+        "# - each z value depends only on the preceding z value and the current input\n",
+        "# - for some z values, there is a condition for the current input, related to \n",
+        "#   the previous z value, which, if fulfilled, leads to smaller numbers\n",
+        "#   => prev_z % 26 + X == current input, so we make those inputs constant\n",
+        "#   => the following dict has the X for each affected depth (0-based input number)\n",
+        "fixed_input_deltas = {3: -8, 6: -11, 8: -3, 10: -3, 11: -1, 12: -10, 13: -16}\n",
+        "\n",
+        "def iterate(inputs, depth, last_0):\n",
+        "  if depth == 14:\n",
+        "    v = zs[13].eval(inputs)\n",
+        "    return inputs if v == 0 else last_0\n",
+        "  l = last_0\n",
+        "  t = None\n",
+        "  if depth == 1:\n",
+        "    # progress\n",
+        "    print(inputs)\n",
+        "  if depth in fixed_input_deltas:\n",
+        "    # the z(depth-1) % 26 + X\n",
+        "    t = zs[depth-1].eval(inputs) % 26 + fixed_input_deltas[depth]\n",
+        "  if not t:\n",
+        "    for i in range(1, 10):  # part 1, increase, last_0 is max input producing 0\n",
+        "    # for i in range(9, 0, -1):  # part 2, decrease, last_0 is min input producing 0\n",
+        "      l = iterate(inputs + [i], depth + 1, l)\n",
+        "      zs[depth].evict()\n",
+        "  elif t > 0 and t < 10:\n",
+        "    # input digits must be in [1..9]\n",
+        "    l = iterate(inputs + [t], depth + 1, l)\n",
+        "    zs[depth].evict()\n",
+        "  return l\n",
+        "      \n",
+        "\"\".join([str(d) for d in iterate([], 0, 0)])\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 435
+        },
+        "id": "IPeAQ8B5aewd",
+        "outputId": "08dbe478-c697-4c12-c93c-3e12a2f7405f"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "z0 (input0 + 8)\n",
+            "z1 ((z0 * 26) + (input1 + 8))\n",
+            "z2 ((z1 * 26) + (input2 + 12))\n",
+            "z3 (((z2 / 26) * ((25 * (0 if ((z2 % 26) + -8) == input3 else 1)) + 1)) + ((input3 + 10) * (0 if ((z2 % 26) + -8) == input3 else 1)))\n",
+            "z4 ((z3 * 26) + (input4 + 2))\n",
+            "z5 ((z4 * 26) + (input5 + 8))\n",
+            "z6 (((z5 / 26) * ((25 * (0 if ((z5 % 26) + -11) == input6 else 1)) + 1)) + ((input6 + 4) * (0 if ((z5 % 26) + -11) == input6 else 1)))\n",
+            "z7 ((z6 * 26) + (input7 + 9))\n",
+            "z8 (((z7 / 26) * ((25 * (0 if ((z7 % 26) + -3) == input8 else 1)) + 1)) + ((input8 + 10) * (0 if ((z7 % 26) + -3) == input8 else 1)))\n",
+            "z9 ((z8 * 26) + (input9 + 3))\n",
+            "z10 (((z9 / 26) * ((25 * (0 if ((z9 % 26) + -3) == input10 else 1)) + 1)) + ((input10 + 7) * (0 if ((z9 % 26) + -3) == input10 else 1)))\n",
+            "z11 (((z10 / 26) * ((25 * (0 if ((z10 % 26) + -1) == input11 else 1)) + 1)) + ((input11 + 7) * (0 if ((z10 % 26) + -1) == input11 else 1)))\n",
+            "z12 (((z11 / 26) * ((25 * (0 if ((z11 % 26) + -10) == input12 else 1)) + 1)) + ((input12 + 2) * (0 if ((z11 % 26) + -10) == input12 else 1)))\n",
+            "z13 (((z12 / 26) * ((25 * (0 if ((z12 % 26) + -16) == input13 else 1)) + 1)) + ((input13 + 2) * (0 if ((z12 % 26) + -16) == input13 else 1)))\n",
+            "[1]\n",
+            "[2]\n",
+            "[3]\n",
+            "[4]\n",
+            "[5]\n",
+            "[6]\n",
+            "[7]\n",
+            "[8]\n",
+            "[9]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'99598963999971'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#"
+      ],
+      "metadata": {
+        "id": "ZoIPeY0lU-tu"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
@@ -3029,7 +3380,7 @@
       "name": "aoc2021.ipynb",
       "provenance": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyMWN2Mb8PwBm0dM9P9jG/jf",
+      "authorship_tag": "ABX9TyMJcs9BWji0D+8VHSJgH8Xh",
       "include_colab_link": true
     },
     "kernelspec": {
